<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_manage"
        android:orderInCategory="100"
        android:title="@string/manage_trackers"
        android:icon="@drawable/ic_people_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_requests"
        android:orderInCategory="200"
        android:title="@string/track_requests"
        app:actionLayout="@layout/custom_menu_item"
        android:icon="@drawable/ic_notifications_none_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_sync"
        android:orderInCategory="300"
        android:title="@string/action_sync"
        android:icon="@drawable/ic_refresh_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_fav"
        android:orderInCategory="400"
        android:title="@string/action_fav"
        android:visible="false"
        android:icon="@drawable/ic_star_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="never"/>

</menu>